# Lab-4

./: CMakeLists.txt  readme.md
StrutWalking/: StrutWalking.dae
res/shaders/: fragment.glsl  skinned_fragment.glsl  skinned_vertex.glsl
src/: camera.cpp  camera.h  mesh.h  shaders.cpp  shaders.h  texture.cpp  texture.h  transform.cpp  transform.h  window.cpp  window.h
src/animations/: skinnedMesh.cpp  skinnedMesh.h
